Perkin-UAT/force-app/main/default/objects/Opportunity/fields/AB_Revenue_Share__c.field-meta.xml
<CustomField>
    <fullName>AB_Revenue_Share__c</fullName>
    <label>AB Revenue Share</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>