Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Account_Class_INF__c.field-meta.xml
<CustomField>
    <fullName>Account_Class_INF__c</fullName>
    <label>Account Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>