Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Account_Name_Local_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Local_Name__c</fullName>
    <formula>Account.NameLocal</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name (Local Name)</label>
    <type>Text</type>
</CustomField>