Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Account_Type_INF__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_INF__c</fullName>
    <description>This field is used within Informatics quote process to drive related Price List.  Do not modify without contacting Informatics SalesForce.com support</description>
    <inlineHelpText>Price List requires Acct Type</inlineHelpText>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
                <default>true</default>
                <label>Commercial</label>
            </value>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>