Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Accountshipping_state__c.field-meta.xml
<CustomField>
    <fullName>Accountshipping_state__c</fullName>
    <formula>Account.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accountshipping state</label>
    <type>Text</type>
</CustomField>