Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Actions_to_Increase_WTP__c.field-meta.xml
<CustomField>
    <fullName>Actions_to_Increase_WTP__c</fullName>
    <label>Actions to Increase WTP</label>
    <type>TextArea</type>
</CustomField>