Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Actions_to_Lower_CTS__c.field-meta.xml
<CustomField>
    <fullName>Actions_to_Lower_CTS__c</fullName>
    <label>Actions to Lower CTS</label>
    <type>TextArea</type>
</CustomField>