Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Add_Rev_Rec_Req_LST__c.field-meta.xml
<CustomField>
    <fullName>Add_Rev_Rec_Req_LST__c</fullName>
    <description>a.	Acceptance  (Perkin Elmer must meet certain criteria before the customer will “Accept” the instrument (or we can take revenue) .   For Example this one may require that Installation and Performance Testing are provided utilizing the customer’s methods, protocols and they have to sign a physical document stating that we’ve met those requirements.
b.	Installation (The instrument must be installed before we can recognize revenue)
c.	Delivery (The instrument must be delivered/received by their receiving doc)
d.	Other (Some smaller instruments don’t require any of the above and we can recognize the revenue shipment etc.</description>
    <label>Additional Rev Rec Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acceptance</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>