Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Age_from_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Age_from_Created_Date__c</fullName>
    <formula>TODAY() -  DATEVALUE( CreatedDate )</formula>
    <label>Age from Created Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>