Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Agricultural_Sector__c.field-meta.xml
<CustomField>
    <fullName>Agricultural_Sector__c</fullName>
    <description>Must select an Agricultural Sector when selecting A Food and Agriculture Segment.</description>
    <label>Agricultural Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grains/Milling</fullName>
            </value>
            <value>
                <fullName>Fruits/Vegetables</fullName>
            </value>
            <value>
                <fullName>Feed</fullName>
            </value>
            <value>
                <fullName>Processed Food</fullName>
            </value>
            <value>
                <fullName>Poultry/Meat/Seafood</fullName>
            </value>
            <value>
                <fullName>Dairy</fullName>
            </value>
            <value>
                <fullName>Liquids</fullName>
            </value>
            <value>
                <fullName>Natural Compounds/Cannabis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>