Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Allbound_Description__c.field-meta.xml
<CustomField>
    <fullName>Allbound_Description__c</fullName>
    <description>Description coming from Allbound Partners.</description>
    <label>Allbound Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>