Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Allbound_ID__c.field-meta.xml
<CustomField>
    <fullName>Allbound_ID__c</fullName>
    <label>Allbound ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>