Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Amount_converted_place_holder_grid__c.field-meta.xml
<CustomField>
    <fullName>Amount_converted_place_holder_grid__c</fullName>
    <label>Amount converted Grid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>