Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Amount_of_Components__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Components__c</fullName>
    <label>Amount of Components</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>