Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Amount_Weightage__c.field-meta.xml
<CustomField>
    <fullName>Amount_Weightage__c</fullName>
    <description>Forecast amount based on EH Management&#39;s formula. Stage 4 - 50%, Stage 5 - 80%, Stage 6/Closed Won - 100%</description>
    <formula>CASE(TEXT(StageName),
&quot;Stage 3 - Develop&quot;, Amount *0.5,
&quot;Stage 4 - Prove&quot;, Amount *0.8,
&quot;Stage 5 - Negotiation&quot;, Amount *1,
&quot;Stage 6 - Implement (Closed)&quot;, Amount *1,
&quot;Closed Won&quot;, Amount *1,
&quot;Stage 4 - Objection Handling&quot;, Amount *0.5,
&quot;Stage 5 - Preferred&quot;, Amount *0.8,
&quot;Stage 6 - Negotiating/Forecast&quot;, Amount *1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount_Weightage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>