Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Analytical_News_enewsletter__c.field-meta.xml
<CustomField>
    <fullName>Analytical_News_enewsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select to depict subscription to the Analytical Enewsletter</inlineHelpText>
    <label>Analytical News Enewsletter</label>
    <type>Checkbox</type>
</CustomField>