Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>Identify Customer Industry Application. Standardized Names (no double spaces, no space after slash, spaces before and after &#39;&amp;&#39;, use &#39;&amp;&#39; vs &#39;and&#39;, space after commas, lists do not have comma before last item and use &#39;&amp;&#39; before last item)</description>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Application_Market__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agricultural Genetics</fullName>
            </value>
            <value>
                <fullName>Agriculture Research</fullName>
            </value>
            <value>
                <fullName>Agrigenomics</fullName>
            </value>
            <value>
                <fullName>Air Testing</fullName>
            </value>
            <value>
                <fullName>Allergy DX</fullName>
            </value>
            <value>
                <fullName>Ancestry</fullName>
            </value>
            <value>
                <fullName>Animal Diagnostics</fullName>
            </value>
            <value>
                <fullName>Antibiotics</fullName>
            </value>
            <value>
                <fullName>API/Compound Analysis</fullName>
            </value>
            <value>
                <fullName>Authenticity &amp; Adulteration</fullName>
            </value>
            <value>
                <fullName>Autoimmun DX</fullName>
            </value>
            <value>
                <fullName>Automated Systems</fullName>
            </value>
            <value>
                <fullName>Basic Research</fullName>
            </value>
            <value>
                <fullName>Batteries, Power &amp; Utilities</fullName>
            </value>
            <value>
                <fullName>Beverages</fullName>
            </value>
            <value>
                <fullName>Biological Pathogens &amp; Toxins</fullName>
            </value>
            <value>
                <fullName>Biologics Development ADME/Tox</fullName>
            </value>
            <value>
                <fullName>Biologics Development Cell line development</fullName>
            </value>
            <value>
                <fullName>Biologics Development GLP Pre-clinical studies</fullName>
            </value>
            <value>
                <fullName>Biologics Development GLP Safety/Tox</fullName>
            </value>
            <value>
                <fullName>Biologics Lot Release</fullName>
            </value>
            <value>
                <fullName>Biomarker Development</fullName>
            </value>
            <value>
                <fullName>Biophysical characterization</fullName>
            </value>
            <value>
                <fullName>BioTherapeutic Manufacturing</fullName>
            </value>
            <value>
                <fullName>Blood Screening</fullName>
            </value>
            <value>
                <fullName>Bone Metabolism</fullName>
            </value>
            <value>
                <fullName>Cannabis/Hemp</fullName>
            </value>
            <value>
                <fullName>Cell Culture</fullName>
            </value>
            <value>
                <fullName>Chemical Food Safety</fullName>
            </value>
            <value>
                <fullName>Chemicals &amp; Mining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>