Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Application_Market__c.field-meta.xml
<CustomField>
    <fullName>Application_Market__c</fullName>
    <description>Identify Customer Market. Standardized Names (no double spaces, no space after slash, spaces before and after &#39;&amp;&#39;, use &#39;&amp;&#39; vs &#39;and&#39;, space after commas, lists do not have comma before last item and use &#39;&amp;&#39; before last item)</description>
    <label>Application Market</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Application_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academia &amp; Academic Research</fullName>
            </value>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Alcoholic &amp; Non-Alcoholic Beverages</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Applied Genomics</fullName>
            </value>
            <value>
                <fullName>Basic Research</fullName>
            </value>
            <value>
                <fullName>Biologics/Vaccines Drug Development</fullName>
            </value>
            <value>
                <fullName>Biologics Manufacturing QA/QC</fullName>
            </value>
            <value>
                <fullName>Cannabis/Hemp</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Chemicals &amp; Mining</fullName>
            </value>
            <value>
                <fullName>Clinical Diagnostics</fullName>
            </value>
            <value>
                <fullName>Contract Lab</fullName>
            </value>
            <value>
                <fullName>Dairy</fullName>
            </value>
            <value>
                <fullName>Detection</fullName>
            </value>
            <value>
                <fullName>Drug Discovery</fullName>
            </value>
            <value>
                <fullName>Drug QA/QC Manufacturing</fullName>
            </value>
            <value>
                <fullName>Edible Oils</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Energy &amp; Petrochem</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Flavor &amp; Fragrance</fullName>
            </value>
            <value>
                <fullName>Forensics &amp; Security</fullName>
            </value>
            <value>
                <fullName>Fruits &amp; Vegetables</fullName>
            </value>
            <value>
                <fullName>Government/Academic</fullName>
            </value>
            <value>
                <fullName>Government &amp; Academia</fullName>
            </value>
            <value>
                <fullName>Imaging</fullName>
            </value>
            <value>
                <fullName>Immunodiagnostics</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>Materials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>