Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Application_Segment__c.field-meta.xml
<CustomField>
    <fullName>Application_Segment__c</fullName>
    <defaultValue>if($RecordType.DeveloperName =&#39;Informatics&#39;,&#39;Informatics&#39;,null)</defaultValue>
    <description>Identify Customer Industry</description>
    <label>Application Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>COVID</fullName>
            </value>
            <value>
                <fullName>Diagnostics</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Informatics</fullName>
            </value>
            <value>
                <fullName>Life Science</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
                <isActive>false</isActive>
                <label>Environmental</label>
            </value>
            <value>
                <fullName>Food And Agriculture</fullName>
                <isActive>false</isActive>
                <label>Food And Agriculture</label>
            </value>
            <value>
                <fullName>Human Health &amp; Life Sciences</fullName>
                <isActive>false</isActive>
                <label>Human Health &amp; Life Sciences</label>
            </value>
            <value>
                <fullName>Human Health and Life Sciences</fullName>
                <isActive>false</isActive>
                <label>Human Health and Life Sciences</label>
            </value>
            <value>
                <fullName>Industrial</fullName>
                <isActive>false</isActive>
                <label>Industrial</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>