Perkin-UAT/force-app/main/default/objects/Opportunity/fields/AU_Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>AU_Sales_Office__c</fullName>
    <label>AU Sales Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>QLD</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>NZ</fullName>
            </value>
            <value>
                <fullName>SA/TAS</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>