Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_Account_Has_SAP_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>BD_Account_Has_SAP_Customer_Number__c</fullName>
    <formula>NOT(ISBLANK(  Account.PKI_SAP_Customer_Number__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Has SAP Customer Number</label>
    <type>Checkbox</type>
</CustomField>