Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_Bank_Details__c.field-meta.xml
<CustomField>
    <fullName>BD_Bank_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Details</label>
    <type>Checkbox</type>
</CustomField>