Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_Bids__c.field-meta.xml
<CustomField>
    <fullName>BD_Bids__c</fullName>
    <label>Bids</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Bid</fullName>
            </value>
            <value>
                <fullName>Two Bid</fullName>
            </value>
            <value>
                <fullName>Limited Enquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>