Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_Customer_Accepted__c.field-meta.xml
<CustomField>
    <fullName>BD_Customer_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates there is a quote in status Customer Accepted on the opportunity.</inlineHelpText>
    <label>Customer Accepted</label>
    <type>Checkbox</type>
</CustomField>