Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_Exact_Tender_Conditions_on_Delivery__c.field-meta.xml
<CustomField>
    <fullName>BD_Exact_Tender_Conditions_on_Delivery__c</fullName>
    <description>SC-406 Renamed label to Tender-Bid</description>
    <label>Tender-Bid Conditions on Delivery</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>