Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_Guidance_Required_3rd_Party_Supplies__c.field-meta.xml
<CustomField>
    <fullName>BD_Guidance_Required_3rd_Party_Supplies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guidance Required: 3rd Party Supplies</label>
    <type>Checkbox</type>
</CustomField>