Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_Import_Export_Certificate__c.field-meta.xml
<CustomField>
    <fullName>BD_Import_Export_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Import Export Certificate</label>
    <type>Checkbox</type>
</CustomField>