Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_Installation_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>BD_Installation_Lead_Time__c</fullName>
    <inlineHelpText>Exact Conditions on Installation Lead Time</inlineHelpText>
    <label>Installation Lead Time</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>