Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_ISO_Certificate__c.field-meta.xml
<CustomField>
    <fullName>BD_ISO_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISO Certificate</label>
    <type>Checkbox</type>
</CustomField>