Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_New_Primary_Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>BD_New_Primary_Quote_Id__c</fullName>
    <label>New Primary Quote Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>