Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_Organization_Chart__c.field-meta.xml
<CustomField>
    <fullName>BD_Organization_Chart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Organization Chart</label>
    <type>Checkbox</type>
</CustomField>