Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_Other_Conditions__c.field-meta.xml
<CustomField>
    <fullName>BD_Other_Conditions__c</fullName>
    <label>Other Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>