Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_Other_Solution_Documents__c.field-meta.xml
<CustomField>
    <fullName>BD_Other_Solution_Documents__c</fullName>
    <label>Other Solution Documents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>