Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_Pan_Copy__c.field-meta.xml
<CustomField>
    <fullName>BD_Pan_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pan Copy</label>
    <type>Checkbox</type>
</CustomField>