Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>BD_Product_Category__c</fullName>
    <label>Product Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GC Gas Chromatographer</fullName>
            </value>
            <value>
                <fullName>LC Liquid Chromatographer</fullName>
            </value>
            <value>
                <fullName>LCM LC Mass Spec.</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>IR Infrared</fullName>
            </value>
            <value>
                <fullName>TEA Thermal Elemental Analysis</fullName>
            </value>
            <value>
                <fullName>UVS Ultra Violet visible Spectroscopy</fullName>
            </value>
            <value>
                <fullName>AA Atomic Analysis</fullName>
            </value>
            <value>
                <fullName>ICP Inductive Coupled Plasma Analysis</fullName>
            </value>
            <value>
                <fullName>ICPMS Inductive Coupled with Mass Spectrometry  Analysis</fullName>
            </value>
            <value>
                <fullName>MAS Mass Spectrometry</fullName>
            </value>
            <value>
                <fullName>AM Aquamatic</fullName>
            </value>
            <value>
                <fullName>DAB DA Bench</fullName>
            </value>
            <value>
                <fullName>DAO DA Online</fullName>
            </value>
            <value>
                <fullName>DL DoughLab</fullName>
            </value>
            <value>
                <fullName>DLS Delta Lactoscope</fullName>
            </value>
            <value>
                <fullName>FN Falling Number</fullName>
            </value>
            <value>
                <fullName>GM Glutomatic</fullName>
            </value>
            <value>
                <fullName>IMF Inframatic Flour</fullName>
            </value>
            <value>
                <fullName>IMG Inframatic Grain</fullName>
            </value>
            <value>
                <fullName>LM Lab Mills</fullName>
            </value>
            <value>
                <fullName>RVA Rapid Visco Analyzer</fullName>
            </value>
            <value>
                <fullName>FTF FT Food</fullName>
            </value>
            <value>
                <fullName>PC PaddyCheck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>