Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_Region__c.field-meta.xml
<CustomField>
    <fullName>BD_Region__c</fullName>
    <description>Updated by PwC as part of SC-516</description>
    <label>Campaign Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BD_Region</valueSetName>
    </valueSet>
</CustomField>