Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_Special_Notes__c.field-meta.xml
<CustomField>
    <fullName>BD_Special_Notes__c</fullName>
    <label>Special Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>