Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_Specification_Favoring__c.field-meta.xml
<CustomField>
    <fullName>BD_Specification_Favoring__c</fullName>
    <label>Specification Favoring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>