Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_Subsidiary_Letter__c.field-meta.xml
<CustomField>
    <fullName>BD_Subsidiary_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subsidiary Letter</label>
    <type>Checkbox</type>
</CustomField>