Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_Technical_Bid__c.field-meta.xml
<CustomField>
    <fullName>BD_Technical_Bid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Technical Bid</label>
    <type>Checkbox</type>
</CustomField>