Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_Technical_Bid_Opening_Date__c.field-meta.xml
<CustomField>
    <fullName>BD_Technical_Bid_Opening_Date__c</fullName>
    <label>Technical Bid Opening Date</label>
    <type>Date</type>
</CustomField>