Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_Tender_Documentation_Folder__c.field-meta.xml
<CustomField>
    <fullName>BD_Tender_Documentation_Folder__c</fullName>
    <description>SC-406 Renamed label to Tender-Bid</description>
    <label>Tender-Bid Documentation Folder</label>
    <type>Url</type>
</CustomField>