Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_Tender_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>BD_Tender_Reference_Number__c</fullName>
    <description>SC-406 Renamed label to Tender-Bid</description>
    <label>Tender-Bid Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>