Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BD_Tender_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>BD_Tender_Release_Date__c</fullName>
    <description>SC-406 Renamed label to Tender-Bid</description>
    <label>Tender-Bid Release Date</label>
    <type>Date</type>
</CustomField>