Perkin-UAT/force-app/main/default/objects/Opportunity/fields/BE__c.field-meta.xml
<CustomField>
    <fullName>BE__c</fullName>
    <description>Changed label from BE to BU and reactivating for Oct13</description>
    <inlineHelpText>Please select the Primary Business Unit for this opportunity.</inlineHelpText>
    <label>BU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ASLS</fullName>
            </value>
            <value>
                <fullName>Dx</fullName>
            </value>
            <value>
                <fullName>GS</fullName>
            </value>
            <value>
                <fullName>INF</fullName>
            </value>
            <value>
                <fullName>LST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>