Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Bid_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Close_Date__c</fullName>
    <description>Date on which the bid or tender closes. This is NOT our submission date or the opportunity close date</description>
    <label>Bid Close Date</label>
    <type>Date</type>
</CustomField>