Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Bid_Open_Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Bid_Open_Days_Remaining__c</fullName>
    <formula>today() - Bid_Close_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bid Open Days Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>