Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Bid_Receive_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Receive_Date__c</fullName>
    <description>Date the bid documents were received by customer care</description>
    <label>Bid Receive Date</label>
    <type>Date</type>
</CustomField>