Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Bid_Sent_Via__c.field-meta.xml
<CustomField>
    <fullName>Bid_Sent_Via__c</fullName>
    <label>Bid Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Purolator</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>e-Bid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>