Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Bid_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Submit_Date__c</fullName>
    <description>Date which PKI submitted the bid response</description>
    <label>Bid Submit Date</label>
    <type>Date</type>
</CustomField>