Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Billing_Schedule_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule_Notes__c</fullName>
    <description>This field is used to track the Billing Schedule Notes which we are sending to Netsuite. (ITSFDC-5103)</description>
    <inlineHelpText>This field is used to track the Billing Schedule Notes which we are sending to Netsuite. (ITSFDC-5103)</inlineHelpText>
    <label>Billing Schedule Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>