Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Booked_Date_INF__c.field-meta.xml
<CustomField>
    <fullName>Booked_Date_INF__c</fullName>
    <inlineHelpText>This field updated by Order Entry when opportunity is Booked</inlineHelpText>
    <label>Booked Date</label>
    <type>Date</type>
</CustomField>