Perkin-UAT/force-app/main/default/objects/Opportunity/fields/Buket_Field_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Buket_Field_Record_Type__c</fullName>
    <formula>IF( RecordType.Name = &#39;Informatics&#39;, &#39;INF&#39;,
IF( RecordType.Name = &#39;Onesource Service&#39;, &#39;OneSource Service&#39;,
IF( RecordType.Name = &#39;LSS OneSource SPI&#39;, &#39;OneSource&#39;,
IF( RecordType.Name = &#39;	EH Record Type&#39;, &#39;EH&#39;,&#39;LST&#39;))))</formula>
    <label>Buket Field: Record Type</label>
    <type>Text</type>
</CustomField>